Add custom exceptions for Jenkins REST API